rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__compression_name_focused_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                ┌Compress Files────────────────────────────────┐                ",
        "                │Archive Format:                               │                ",
        "                │●ZIP                                          │                ",
        "                │○7Z                                           │                ",
        "                │○TGZ                                          │                ",
        "                │○TAR                                          │                ",
        "                │○LZH                                          │                ",
        "                │○CAB                                          │                ",
        "                │○XZ                                           │                ",
        "                │○LZMA                                         │                ",
        "                │                                              │                ",
        "                │Compression Level:                            │                ",
        "                │○Store (0)                                    │                ",
        "                │○Fastest (1)                                  │                ",
        "                │○Fast (3)                                     │                ",
        "                │●Normal (5)                                   │                ",
        "                │○Maximum (7)                                  │                ",
        "                │Archive Name:                                 │                ",
        "                │backup█                                       │                ",
        "                │                                              │                ",
        "                │                [*OK*]    [Cancel]            │                ",
        "                └──────────────────────────────────────────────┘                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 31, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 19, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 23, y: 19, fg: Black, bg: Cyan, underline: Reset, modifier: BOLD,
        x: 24, y: 19, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 63, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 40, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 42, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
